tests/paczka1/fuzzy1/14619965.err
Error in line 21: SSOrftGbdK8 S833 76,6
Error in line 32: S833 S597 63,5
